--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "aos": "^2.3.4",
     "gh-pages": "^5.0.0",
     "install": "^0.13.0",
+    "jquery": "^3.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
+    "react-skillbars": "^2.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.16"
   }
 }
